--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
             </div>
         </section>
         <section>
+            <h2 hidden>О нашей работе</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
