--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </div>
         </section>
         <section>
-            <h2 hidden>О нашей работе</h2>
+            <h2>О нашей работе</h2>
             <ul>
                 <li>
                     <h3>Внимание к деталям</h3>
@@ -113,7 +113,7 @@
                     <a href="mailto:info@devstudio.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380961111111">+38 096 111 11 11</a>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
         </address>
