Смена местоположения изображений

--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
             <h2>Чем мы занимаемся</h2>
             <ul>
                 <li>
-                    <img src="./img/image-1.jpg" alt="Разработка" width="370" height="294">
+                    <img src="./img/main/image-1.jpg" alt="Разработка" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./img/image-2.jpg" alt="Оптимизация" width="370" height="294">
+                    <img src="./img/main/image-2.jpg" alt="Оптимизация" width="370" height="294">
                 </li>
                 <li>
-                    <img src="./img/image-3.jpg" alt="Дизайн" width="370" height="294">
+                    <img src="./img/main/image-3.jpg" alt="Дизайн" width="370" height="294">
                 </li>
             </ul>
         </section>
@@ -79,22 +79,22 @@
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./img/photo-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
+                    <img src="./img/main/photo-1.jpg" alt="Игорь Демьяненко" width="270" height="260">
                     <h3>Игорь Демьяненко</h3>
                     <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./img/photo-2.jpg" alt="Ольга Репина" width="270" height="260">
+                    <img src="./img/main/photo-2.jpg" alt="Ольга Репина" width="270" height="260">
                     <h3>Ольга Репина</h3>
                     <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./img/photo-3.jpg" alt="Николай Тарасов" width="270" height="260">
+                    <img src="./img/main/photo-3.jpg" alt="Николай Тарасов" width="270" height="260">
                     <h3>Николай Тарасов</h3>
                     <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./img/photo-4.jpg" alt="Михаил Ермаков" width="270" height="260">
+                    <img src="./img/main/photo-4.jpg" alt="Михаил Ермаков" width="270" height="260">
                     <h3>Михаил Ермаков</h3>
                     <p lang="en">UI Designer</p>
                 </li>
