--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
         <nav>
-            <a href="" lang="en">WebStudio</a>
+            <a href="" lang="en"><span>Web</span>Studio</a>
             <ul>
                 <li>
                     <a href="">Студия</a>
@@ -102,7 +102,7 @@
         </section>
     </main>
     <footer>
-        <a href="" lang="en">WebStudio</a>
+        <a href="" lang="en"><span>Web</span>Studio</a>
         <address>
             <ul>
                 <li>
